# N26-to-YNAB

./: .gitignore  Dockerfile  README.md  configure_crontabs.sh  logging.ini  main.py  pyproject.toml
config/: n26.toml.example
src/: api.py  config.py  exceptions.py  paths.py
