[tool.poetry]
name = "ynab-n26-bridge"
version = "0.1.0"
description = "Bridge between YNAB and N26 to automate transaction imports"
authors = ["ivallesp <ivanvallesperez@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
n26 = "^2.2.1"
ynab_client = "^0.1.8"
pandas = "^1.0.1"
openpyxl = "^3.0.3"

[tool.poetry.dev-dependencies]
ipython = "^7.12.0"
ipykernel = "^5.1.4"
flake8 = "^3.7.9"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
